--- a/apps/documenteditor/main/app/template/Toolbar.template
+++ b/apps/documenteditor/main/app/template/Toolbar.template
@@ -143,7 +143,7 @@
                 </div>
                 <div class="separator long"></div>
                 <div class="group">
-                    <span class="btn-slot text x-huge" id="slot-btn-watermark"></span>
+                    <span class="btn-slot text x-huge" id="slot-btn-watermark" style="display: none;"></span>
                 </div>
             </section>
             <section class="panel" data-tab="links">
