--- a/apps/presentationeditor/main/app/template/LeftMenu.template
+++ b/apps/presentationeditor/main/app/template/LeftMenu.template
@@ -8,7 +8,7 @@
         <!-- /** coauthoring end **/ -->
         <button id="left-btn-plugins" class="btn btn-category" data-hint="0" data-hint-direction="right" data-hint-offset="big" content-target=""><i class="icon toolbar__icon btn-menu-plugin">&nbsp;</i></button>
         <button id="left-btn-support" class="btn btn-category" data-hint="0" data-hint-direction="right" data-hint-offset="big" content-target=""><i class="icon toolbar__icon btn-menu-support">&nbsp;</i></button>
-        <button id="left-btn-about" class="btn btn-category" data-hint="0" data-hint-direction="right" data-hint-offset="big" content-target=""><i class="icon toolbar__icon btn-menu-about">&nbsp;</i></button>
+        <button style="display: none;" id="left-btn-about" class="btn btn-category" data-hint="0" data-hint-direction="right" data-hint-offset="big" content-target=""><i class="icon toolbar__icon btn-menu-about">&nbsp;</i></button>
     </div>
     <div class="left-panel" style="">
         <!-- /** coauthoring begin **/ -->
